fix a little jump in the toggle switches

--- a/src/style.css
+++ b/src/style.css
@@ -179,8 +179,9 @@ h1 {
     border-top: 1px solid #000;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 100%;
+    padding: 0 1rem;
 }
 
 .synth-mode-container {
@@ -304,8 +305,9 @@ h1 {
     grid-area: block-toggle;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 100%;
+    padding: 0 1rem;
 }
 
 .toggle-switch {
